# usguri-almoxarifado

./: Cargo.toml  docker-compose.yml
migrations/: 1_setup.sql  2_users.sql  3_places.sql
src/: authorization.rs  config.rs  controllers.rs  lib.rs  models.rs  services.rs  validation.rs
src/controllers/: place_controller.rs  profile_controller.rs  user_controller.rs
src/models/: errors.rs  place_model.rs  profile_model.rs  user_model.rs
src/services/: place_service.rs  profile_service.rs  user_service.rs
src/users/: controller.rs  model.rs  service.rs
