[package]
name = "usguri-almoxarifado"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Core shit
axum = { version = "0.6.11", features = ["ws", "tower-log", "json"] }
tokio = { version = "1.26.0", features = ["full"] }
sqlx = { version = "0.6.2", features = ["runtime-tokio-native-tls", "chrono", "postgres" ] }

chrono = { version = "0.4.24", features = ["serde"] }

tower = { version = "0.4.13", features = ["full"] }
tower-http = { version = "0.4.0", features = ["trace"] }

serde = { version = "1.0.157", features = ["derive"] }
serde_json = "1.0.94"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }

anyhow = "1.0.70"
dotenvy = "0.15.6"
thiserror = "1.0.40"

futures = "0.3.27"
validator = { version = "0.16.0", features = ["derive"] }
argon2 = "0.5.0"
rand = "0.8.5"

[profile.dev.package.sqlx-macros]
opt-level = 3
